# ta_classify

./: .gitignore  README.md  add_indicators.py  main.py  notebook.ipynb  pyproject.toml  std_norm_test.ipynb  test.py  test_pipeline.py
.ipynb_checkpoints/: add_indicators-checkpoint.py  data_processing-checkpoint.py  feature_engineering-checkpoint.ipynb  functions-checkpoint.py  main-checkpoint.py  std_norm_test-checkpoint.ipynb  test_pipeline-checkpoint.py
notebooks/: autoML_test.ipynb  debug.ipynb  feature_importance.ipynb  sklearn_test.ipynb
notebooks/.ipynb_checkpoints/: autoML_test-checkpoint.ipynb  notebook-checkpoint.ipynb  xgboost_tuning-checkpoint.ipynb
