[tool.poetry]
name = "taclassify"
version = "0.1.0"
description = ""
authors = ["repl.it user <replituser@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
yfinance = "^0.1.55"
pandas = "^1.2.2"
ta = "^0.7.0"
sklearn = "^0.0"
scikit-learn = "^0.24.1"
xgboost = "^1.3.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
